# robots

./: .gitignore  README.md  install_descriptions  update_robots
anymal_config/: CMakeLists.txt  config.json  package.xml
anymal_config/config/gait/: gait.yaml
anymal_config/include/: gait_config.h
anymal_config/launch/: bringup.launch
astro_config/include/: gait_config.h  quadruped_description.h
bruno_config/: CMakeLists.txt  config.json
configs/mini_pupper_config/: CMakeLists.txt  README.md  config.json  package.xml
configs/mini_pupper_config/config/autonomy/: navigation.yaml
configs/mini_pupper_config/config/cartographer/: nav.lua  slam.lua
configs/mini_pupper_config/config/gait/: gait.yaml
configs/mini_pupper_config/config/joints/: joints.yaml
configs/mini_pupper_config/config/links/: links.yaml
configs/mini_pupper_config/config/move_base/: base_local_planner_holonomic_params.yaml  costmap_common_params.yaml
configs/mini_pupper_config/config/ros_control/: ros_control.yaml
configs/mini_pupper_config/include/: gait_config.h  quadruped_description.h
configs/mini_pupper_config/launch/: bringup.launch  bringup.launch.py  gazebo.launch  gazebo.launch.py  navigate.launch  navigate.launch.py  slam.launch  slam.launch.py  spawn_robot.launch
configs/mini_pupper_config/launch/include/: move_base.launch
configs/mini_pupper_config/worlds/: outdoor.world
dream_walker_config/: config.json
littledog_config/: CMakeLists.txt  config.json  package.xml
mini_cheetah_config/: CMakeLists.txt  config.json
spotmicro_config/: config.json
(+300 files in other folders)
