<?xml version="1.0"?>
<package format="2">
  <name>anymal_config</name>
  <version>0.0.0</version>
  <description>anymal Champ Config Package</description>

  <maintainer email="todo@todo.com">TODO</maintainer>
  <author>TODO</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>champ_base</exec_depend>
</package>